--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "symfony/dom-crawler": "2.8.*|3.0.*"
     },
     "autoload": {
+        "files":[
+            "app/Http/helpers.php"
+        ],
         "classmap": [
             "database"
         ],
